fixes of text visibility

--- a/css/style.css
+++ b/css/style.css
@@ -3010,6 +3010,18 @@ body[dir="rtl"] .checkbox:checked,
   margin-left: 5rem;
 }
 
+.ml-\[150px\] {
+  margin-left: 150px;
+}
+
+.ml-\[148px\] {
+  margin-left: 148px;
+}
+
+.ml-\[145px\] {
+  margin-left: 145px;
+}
+
 .block {
   display: block;
 }
@@ -3258,14 +3270,6 @@ body[dir="rtl"] .checkbox:checked,
   max-width: 400px;
 }
 
-.max-w-\[700px\] {
-  max-width: 700px;
-}
-
-.max-w-\[250px\] {
-  max-width: 250px;
-}
-
 .grow {
   flex-grow: 1;
 }
@@ -3483,10 +3487,6 @@ body[dir="rtl"] .checkbox:checked,
   background-image: linear-gradient(to top left, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
-}
-
 .from-darkcyan {
   --tw-gradient-from: var(--darkcyan);
   --tw-gradient-to: rgb(255 255 255 / 0);
@@ -3496,12 +3496,6 @@ body[dir="rtl"] .checkbox:checked,
 .from-lightercyan {
   --tw-gradient-from: var(--lightercyan);
   --tw-gradient-to: rgb(255 255 255 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-black {
-  --tw-gradient-from: #000;
-  --tw-gradient-to: rgb(0 0 0 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -3577,6 +3571,11 @@ body[dir="rtl"] .checkbox:checked,
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .pt-6 {
@@ -3727,11 +3726,6 @@ body[dir="rtl"] .checkbox:checked,
   vertical-align: bottom;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -3760,6 +3754,11 @@ body[dir="rtl"] .checkbox:checked,
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-4xl {
@@ -3843,6 +3842,11 @@ body[dir="rtl"] .checkbox:checked,
 .text-\[\#46ddec\] {
   --tw-text-opacity: 1;
   color: rgb(70 221 236 / var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .opacity-100 {
@@ -4214,6 +4218,11 @@ svg {
   color: rgb(1 164 161 / var(--tw-text-opacity));
 }
 
+.dark .dark\:text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
 .dark .dark\:hover\:text-lightcyan:hover {
   color: var(--lightcyan);
 }
@@ -4325,6 +4334,86 @@ svg {
     margin-top: 2.5rem;
   }
 
+  .md\:ml-\[80px\] {
+    margin-left: 80px;
+  }
+
+  .md\:ml-\[152px\] {
+    margin-left: 152px;
+  }
+
+  .md\:ml-\[156px\] {
+    margin-left: 156px;
+  }
+
+  .md\:ml-\[160px\] {
+    margin-left: 160px;
+  }
+
+  .md\:ml-\[162px\] {
+    margin-left: 162px;
+  }
+
+  .md\:ml-32 {
+    margin-left: 8rem;
+  }
+
+  .md\:ml-28 {
+    margin-left: 7rem;
+  }
+
+  .md\:ml-\[120\] {
+    margin-left: 120;
+  }
+
+  .md\:ml-\[114\] {
+    margin-left: 114;
+  }
+
+  .md\:ml-\[110px\] {
+    margin-left: 110px;
+  }
+
+  .md\:ml-\[113px\] {
+    margin-left: 113px;
+  }
+
+  .md\:ml-\[116px\] {
+    margin-left: 116px;
+  }
+
+  .md\:ml-\[124px\] {
+    margin-left: 124px;
+  }
+
+  .md\:ml-\[130px\] {
+    margin-left: 130px;
+  }
+
+  .md\:ml-\[70px\] {
+    margin-left: 70px;
+  }
+
+  .md\:ml-\[84px\] {
+    margin-left: 84px;
+  }
+
+  .md\:ml-\[82px\] {
+    margin-left: 82px;
+  }
+
+  .md\:ml-\[114px\] {
+    margin-left: 114px;
+  }
+
+  .md\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
   .md\:inline-block {
     display: inline-block;
   }
@@ -4419,10 +4508,6 @@ svg {
 
   .md\:max-w-\[300px\] {
     max-width: 300px;
-  }
-
-  .md\:max-w-\[400px\] {
-    max-width: 400px;
   }
 
   .md\:grid-cols-2 {
@@ -4621,6 +4706,54 @@ svg {
 
   .lg\:mr-0 {
     margin-right: 0px;
+  }
+
+  .lg\:ml-\[220px\] {
+    margin-left: 220px;
+  }
+
+  .lg\:ml-\[217px\] {
+    margin-left: 217px;
+  }
+
+  .lg\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .lg\:mt-\[170px\] {
+    margin-top: 170px;
+  }
+
+  .lg\:mt-\[140px\] {
+    margin-top: 140px;
+  }
+
+  .lg\:mt-\[60px\] {
+    margin-top: 60px;
+  }
+
+  .lg\:mt-\[20px\] {
+    margin-top: 20px;
+  }
+
+  .lg\:mt-\[82px\] {
+    margin-top: 82px;
+  }
+
+  .lg\:mt-\[22px\] {
+    margin-top: 22px;
+  }
+
+  .lg\:mt-\[24px\] {
+    margin-top: 24px;
+  }
+
+  .lg\:mt-\[28px\] {
+    margin-top: 28px;
+  }
+
+  .lg\:mt-\[30px\] {
+    margin-top: 30px;
   }
 
   .lg\:block {
@@ -4905,6 +5038,14 @@ svg {
   .lg\:leading-snug {
     line-height: 1.375;
   }
+
+  .lg\:text-lightcyan {
+    color: var(--lightcyan);
+  }
+
+  .dark .lg\:dark\:text-lightcyan {
+    color: var(--lightcyan);
+  }
 }
 
 @media (min-width: 1280px) {
@@ -5038,6 +5179,26 @@ svg {
 
   .xl\:mt-\[25px\] {
     margin-top: 25px;
+  }
+
+  .xl\:ml-\[270px\] {
+    margin-left: 270px;
+  }
+
+  .xl\:ml-\[265px\] {
+    margin-left: 265px;
+  }
+
+  .xl\:ml-\[267px\] {
+    margin-left: 267px;
+  }
+
+  .xl\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .xl\:mt-6 {
+    margin-top: 1.5rem;
   }
 
   .xl\:inline-block {
@@ -5278,6 +5439,14 @@ svg {
     padding-bottom: 148px;
   }
 
+  .xl\:pt-4 {
+    padding-top: 1rem;
+  }
+
+  .xl\:pt-24 {
+    padding-top: 6rem;
+  }
+
   .xl\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -5332,6 +5501,14 @@ svg {
   .xl\:leading-snug {
     line-height: 1.375;
   }
+
+  .xl\:text-lightcyan {
+    color: var(--lightcyan);
+  }
+
+  .dark .xl\:dark\:text-lightcyan {
+    color: var(--lightcyan);
+  }
 }
 
 @media (min-width: 1536px) {
@@ -5373,6 +5550,14 @@ svg {
 
   .\32xl\:mt-\[100px\] {
     margin-top: 100px;
+  }
+
+  .\32xl\:ml-auto {
+    margin-left: auto;
+  }
+
+  .\32xl\:mr-auto {
+    margin-right: auto;
   }
 
   .\32xl\:h-\[450px\] {
